<resources>
    <string name="app_name">My App Protofolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="main_activity_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="SpotifyStreamer">Spotify Streamer</string>
    <string name="ScoresApp">Scores App</string>
    <string name="libApp">Library App</string>
    <string name="buildIt">Build it Bigger</string>
    <string name="xyz">XYZ Reader</string>
    <string name="capston">CAPSTONE: MY OWN APP</string>
    <string name="toast_spotify">This button will launch my spotify app</string>
    <string name="toast_scores">This button will launch my scores app</string>
    <string name="toast_library">This button will launch my library app</string>
    <string name="toast_build">This button will launch my build it app</string>
    <string name="toast_xyz">This button will launch my xyz reader app</string>
    <string name="toast_capstone">This button will launch my capston app</string>
</resources>
