<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEEAF1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_title"
        android:textSize="22sp"
        android:textColor="#000000"
        android:id="@+id/textView"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:id="@+id/linearLayout"
        android:gravity="center"
        android:padding="10dp"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView">


    <Button
        android:id="@+id/SpotifyStreamerBtn"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SpotifyStreamer" />

    <Button
        android:id="@+id/ScoresAppBtn"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ScoresApp" />

    <Button
        android:id="@+id/LibraryAppBtn"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/libApp" />

    <Button
        android:id="@+id/buildItBtn"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buildIt" />

    <Button
        android:id="@+id/xyzBtn"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xyz" />

        <Button
            android:id="@+id/capstonBtn"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CD1C4A"
            android:textColor="@android:color/white"
            android:text="@string/capston" />
    </LinearLayout>
</RelativeLayout>
